# xtensor-interp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
XTensorInterp/: CMakeLists.txt  axis.hpp
XTensorInterp/XTensorInterp/: axis.h  container.h  interpolator.h  itertools.h
cmake/: googletest-download.cmake  googletest.cmake
include/: axis.h  hello-world.h  pybind-test-5.h  rgi.h  xtensor-interp.h
src/: axis.cpp  hello-world.cpp  main.cpp  pybind-test-5.cpp  rgi.cpp  xtensor-interp.cpp
test/: test_project.cpp
tests/: CMakeLists.txt  test_container.cpp  test_foo.cpp  test_interpolator.cpp  test_itertools.cpp
